# eheatmap

./: LICENSE  README.md  example.py  pyproject.toml
docs/: epheatmap_example.ipynb
eheatmap/: __init__.py  annotations.py  clustering.py  core.py  dendrogram.py  eheatmap.py  legend.py  utils.py
ezheatmap/: eheatmap.py
