[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eheatmap"
version = "0.1.0"
description = "Effortless heatmap generation in Python: Focus on your data, not the plotting code."
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "scipy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eheatmap*"]
